Opened 19 years ago

Closed 19 years ago

Last modified 19 years ago

#642 closed bug (fixed)

[Sliding tabs] titlebar vanishes when resizing window

Reported by: johndrinkwater Owned by: axeld
Priority: normal Milestone: R1
Component: - General Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Steps to reproduce: 1, slide title bar to far right of the window. 2, resize window horizontally to be smaller than the width of the titlebar. titlebar has gone

hrev17629

Change History (3)

comment:1 by axeld, 19 years ago

Resolution: fixed

comment:2 by axeld, 19 years ago

Status: newclosed

comment:3 by axeld, 19 years ago

Fixed in hrev17637. There are remaining issues, though, see #643.

Note: See TracTickets for help on using tickets.