* The (right-most moved) tab no longer goes away when resizing the window to a size   smaller than the tab size. This fixes bug #642. * There are remaining issues while resizing the window, though. * Fixed warning.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17637 a95241bf-73f2-0310-859d-f6bbb57e9c96